fin de la grille

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,5 +63,14 @@ video {
   font-size: 15px;
   color: #000000;
   letter-spacing: 0;
-  text-align: center;
+}
+
+.news {
+  font-family: Helvetica;
+  font-weight: 600;
+  font-size: 45px;
+  color: #ffffff;
+  letter-spacing: 0;
+  line-height: 52px;
+  color: #000000;
 }
