--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -54,7 +54,7 @@ video {
   padding-bottom: 12px;
   background-color: white;
   border: 2px solid black;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica;
 }
 
 .logo {
