changements tailles textes

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -87,15 +87,80 @@ video {
   color: #000000;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 335px) {
   .news {
-    font-size: 45px;
+    font-size: 70px;
+    line-height: 70px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   .news {
     font-size: 140px;
+    line-height: 152px;
+  }
+}
+
+@media (max-width: 992px) {
+  .verre {
+    display: none;
+  }
+}
+
+.presentation {
+  font-family: Helvetica;
+  font-weight: 300;
+  font-size: 24px;
+  letter-spacing: 0;
+}
+
+@media (min-width: 335px) {
+  .presentation {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .presentation {
+    font-size: 24px;
+  }
+}
+
+.locations {
+  font-family: Helvetica;
+  font-weight: 300;
+  font-size: 24px;
+  letter-spacing: 0;
+}
+
+@media (min-width: 335px) {
+  .locations {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .locations {
+    font-size: 24px;
+  }
+}
+
+.news-products {
+  font-family: Helvetica;
+  font-weight: 300;
+  font-size: 24px;
+  letter-spacing: 0;
+}
+
+@media (min-width: 335px) {
+  .news-products {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .news-products {
+    font-size: 24px;
   }
 }
 
@@ -121,6 +186,7 @@ video {
 @media (min-width: 992px) {
   .craft-brewery {
     font-size: 71px;
+    line-height: 78px;
   }
 }
 
@@ -129,22 +195,34 @@ video {
   font-size: 15px;
   color: black;
   letter-spacing: 0;
+  padding-top: 20px;
 }
 
 @media (min-width: 335px) {
   .craft-bewery-text {
-    font-size: 20px;
+    font-size: 15px;
+    line-height: 20px;
   }
 }
 
 @media (min-width: 992px) {
   .craft-bewery-text {
     font-size: 25px;
+    line-height: 35px;
   }
 }
 
-@media (min-width: 992px) {
-  .verre {
-    display: none;
-  }
+.beer {
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.taste {
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.informations-product {
+  font-weight: 300;
+  font-size: 14px;
 }
