--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 
 html {
   font-size: 16px;
+  min-width: 375px;
   @import "bootstrap/scss/bootstrap-grid";
 }
 
@@ -24,7 +25,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-
+  padding: 10px 16px;
   font-size: 1rem;
   line-height: 1.25;
 }
@@ -53,7 +54,7 @@ video {
   padding-top: 12px;
   padding-bottom: 12px;
   background-color: white;
-  border: 2px solid black;
+  border: 1px solid black;
   font-family: Helvetica;
 }
 
@@ -84,21 +85,34 @@ video {
   font-size: 140px;
   color: #ffffff;
   letter-spacing: 0;
-  line-height: 152px;
   color: #000000;
+  height: 50%;
+}
+
+.news-row {
+  height: 50%;
 }
 
 @media (max-width: 992px) {
   .news {
     font-size: 45px;
-    line-height: 152px;
   }
+}
+
+.verre {
+  display: flex;
+  align-items: center;
 }
 
 @media (max-width: 992px) {
   .verre {
     display: none;
   }
+}
+
+.druide {
+  display: flex;
+  align-items: center;
 }
 
 .presentation {
@@ -126,21 +140,24 @@ video {
   }
 }
 
-.news-products {
+.products {
   font-family: Helvetica;
   font-weight: 300;
   font-size: 15px;
   letter-spacing: 0;
+  display: flex;
+  justify-content: flex-end;
 }
 
 @media (min-width: 992px) {
-  .news-products {
+  .products {
     font-size: 24px;
   }
 }
 
 .gris {
   background-color: #d8d8d8;
+  border: 1px black solid;
 }
 
 .craft-brewery {
@@ -160,7 +177,8 @@ video {
 }
 
 .craft-bewery-text {
-  font-family: Helvetica-Light;
+  font-family: Helvetica;
+  font-weight: 300;
   font-size: 15px;
   color: black;
   letter-spacing: 0;
@@ -202,7 +220,6 @@ video {
   font-size: 40px;
   letter-spacing: 0;
   line-height: 43px;
-  margin: 10px;
 }
 
 @media (min-width: 992px) {
@@ -216,6 +233,7 @@ video {
   font-family: Helvetica;
   font-size: 16px;
   letter-spacing: 0;
+  height: auto;
 }
 
 @media (min-width: 992px) {
@@ -230,6 +248,7 @@ video {
   font-size: 20px;
   letter-spacing: 0;
   color: #5a8088;
+  padding-top: 70px;
 }
 
 @media (min-width: 992px) {
@@ -238,10 +257,175 @@ video {
   }
 }
 
+.img-fleche {
+  max-width: 91px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
 .help {
   text-transform: uppercase;
 }
 
 .blue {
   background-color: #b0f1ff !important;
+}
+
+.container-reseaux {
+  max-width: 9px;
+  display: flex;
+}
+
+@media (min-width: 992px) {
+  .container-reseau {
+    max-width: 19px;
+  }
+}
+
+@media (max-width: 992px) {
+  .space {
+    display: none;
+  }
+}
+
+.header-one-img {
+  padding: 0 !important;
+}
+
+.header-one-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.img-gout {
+  scale: 2;
+  display: flex;
+  align-items: center;
+}
+
+.img-vanille {
+  padding-bottom: 30px;
+}
+
+.img-cbd {
+  padding-bottom: 30px;
+}
+
+.img-cerise {
+  padding-bottom: 30px;
+}
+
+.img-carte {
+  padding: 0;
+  margin: 0px;
+}
+
+.no-padding {
+  padding-bottom: 0;
+  border-right: 1px solid black;
+}
+
+.chevalier {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.gout {
+  display: flex;
+  align-items: center;
+  border-top: 1px solid black;
+}
+
+.colonne-1 {
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  justify-content: flex-end;
+}
+
+.colonne-2 {
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+}
+
+@media (min-width: 992px) {
+  .etoile {
+    display: flex;
+    align-items: flex-end;
+    top: 250px;
+  }
+}
+
+.etoile {
+  position: absolute;
+  width: 20%;
+  display: flex;
+  align-items: flex-end;
+  top: 1200px;
+  left: 0px;
+  animation: spin 10s linear infinite;
+  transform-origin: center;
+}
+
+@media (max-width: 335px) {
+  .etoile {
+    position: absolute;
+    width: 60%;
+    display: flex;
+    align-items: flex-end;
+    top: 450px;
+    left: 0px;
+    animation: spin 10s linear infinite;
+    transform-origin: center;
+  }
+}
+
+@-moz-keyframes spin {
+  0% {
+    rotate: 0deg;
+    transform-origin: center;
+  }
+}
+@-webkit-keyframes spin {
+  100% {
+    rotate: 360deg;
+  }
+}
+
+.copyright {
+  font-family: Helvetica;
+  font-weight: 300;
+  font-size: 8px;
+}
+
+@media (min-width: 992px) {
+  .copyright {
+    font-size: 10px;
+  }
+}
+
+.img-clap {
+  display: flex;
+  justify-content: center;
+}
+
+.products-beer {
+  padding: 0 !important;
+}
+
+.map {
+  padding: 0 !important;
+}
+
+.description-product {
+  padding-left: 15px;
+  padding-bottom: 15px;
+}
+
+.friends {
+  margin: auto;
 }
